@@ -1,3 +1,5 @@
+import com.google.gson.Gson
+import com.google.gson.reflect.TypeToken
 import generators.Generator
 import kotlinx.cli.ArgParser
 import kotlinx.cli.ArgType
@@ -11,12 +13,15 @@ private val targetDir = File("./result/")
 private val tmpDir = File("./tmp/")
 private const val javaPath = "/usr/lib/jvm/default-runtime/bin/"
 private const val kexIntrinsicsJarPath = "/home/vldf/.m2/repository/org/jetbrains/research/kex-intrinsics/0.0.1/kex-intrinsics-0.0.1.jar"
+private const val kexJarPath = "/home/vldf/IdeaProjects/kex/kex-runner/target/kex-runner-0.0.1-jar-with-dependencies.jar"
+private const val kexBaseDir = "/home/vldf/IdeaProjects/kex/"
 
 fun main(args: Array<String>) {
     val argParser = ArgParser("libsl analyzer")
     val lslPath by argParser.option(ArgType.String, "lsl", "i", "lsl file path").required()
     val jarPath by argParser.option(ArgType.String, "libJar", "j", "library jar file path")
     val libraryDirPath by argParser.option(ArgType.String, "libDir", "d", "library dir path")
+    val subject by argParser.option(ArgType.String, "subject", "s", "Class, package or method").required()
     argParser.parse(args)
 
     val parser = ModelParser()
@@ -42,6 +47,11 @@ fun main(args: Array<String>) {
     }
     saveGeneratedCodeToFile(generatedCodeFiles, saveToFile = tmpDir)
     compileMockCode(codeFromDir = tmpDir, generatedFileNames = generatedCodeFiles.keys.toList(), targetDir)
+
+    println("code was instrumented")
+    println("running KEX..")
+    runKex(kexJarPath, classPath = targetDir.absolutePath, tmpDir, subject)
+    processKexResult(File(tmpDir.absolutePath + "/" + "defect.json"))
 }
 
 private fun unzipLibToPath(lib: File, target: File) {
@@ -72,7 +82,6 @@ private fun saveGeneratedCodeToFile(generated: Map<String, String>, saveToFile: 
 private fun compileMockCode(codeFromDir: File, generatedFileNames: List<String>, target: File) {
     deleteFilesThatNamesEqualsWithGenerated(generatedFileNames, target)
     File(codeFromDir.absolutePath + "/" + "@sources.txt").writeText(generatedFileNames.joinToString("\n") { "${codeFromDir.absolutePath}/$it.java" })
-    val runtime = Runtime.getRuntime()
     val javacArgs = arrayOf(
         "${javaPath}javac",
         "-cp",
@@ -83,7 +92,7 @@ private fun compileMockCode(codeFromDir: File, generatedFileNames: List<String>,
         "$target",
         "@./tmp/@sources.txt"
     )
-
+    val runtime = Runtime.getRuntime()
     val javacProcess = runtime.exec(javacArgs)
     javacProcess.waitFor()
     javacProcess.printOutput()
@@ -92,6 +101,41 @@ private fun compileMockCode(codeFromDir: File, generatedFileNames: List<String>,
 private fun deleteFilesThatNamesEqualsWithGenerated(fileNames: List<String>, target: File) {
     for (name in fileNames) {
         File(target.absolutePath + "/" + name + ".class").delete()
+    }
+}
+
+private fun runKex(kexPath: String, classPath: String, tmpDir: File, subject: String) {
+    val workingDir = File(kexBaseDir)
+    val kexArgs = arrayOf(
+        "$javaPath/java",
+        "-Xmx16384m",
+        "-Djava.security.manager",
+        "-Djava.security.policy==kex.policy",
+        "-jar",
+        kexPath,
+        "-cp",
+        classPath,
+        "-m",
+        "checker",
+        "-t",
+        subject,
+        "--option",
+        "defect:outputFile",
+        "${tmpDir.absolutePath}/defect.json"
+    )
+    val runtime = Runtime.getRuntime()
+    val kexProcess = runtime.exec(kexArgs, null, workingDir)
+    kexProcess.waitFor()
+    kexProcess.printOutput()
+}
+
+private fun processKexResult(defectFile: File) {
+    val gson = Gson()
+    val defectsArrayType = (object : TypeToken<Array<Defect>>() {}).type
+    val report = gson.fromJson<Array<Defect>>(defectFile.readText(), defectsArrayType)
+    for (defect in report) {
+        if (defect.type != "ASSERT") continue
+        println(defect.testFile)
     }
 }
 
